<resources>
    <string name="app_name">Lisktop</string>

    <string name="settings_display">Display</string>

    <string name="title_activity_settings">Settings</string>

    <string name="settings_choose_mainApp">Choose Apps shown on main page</string>

    <!-- 待办事项相关 -->
    <string name="todo_title">To-do List</string>
    <string name="todo_prompt">Add to-do</string>

    <!-- 设置相关-->
    <string name="show_icon">Show icon on launcher</string>
    <string name="choose_dock_Apps">Choose Dock Apps</string>
    <string name="app_sort_method">Choose Method to Sort Apps</string>
    <string name="set_motto">Set a motto on launcher</string>
    <string name="label_app_level">Methods to  classify Apps</string>
    <string name="set_app_levels">Set App Levels</string>
    <string name="act_sett_label">Settings</string>
    <string name="dialog_positive">Confirm</string>
    <string name="dialog_negative">Cancel</string>


    <string name="chser_title">Choose Dock Apps</string>
    <string name="man_hidden">Hidden Apps</string>
    <string name="menu_about">About</string>
    <string name="get_usage_stats_permmision">Request Usage Stastic Permmision</string>

</resources>
