<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.SettingsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Switch
            android:id="@+id/set_switch_show_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.6"
            android:padding="14dp"
            android:text="@string/show_icon"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/set_chs_dock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:text="@string/choose_dock_Apps"
            android:textColor="#000000"
            android:alpha="0.6"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/set_motto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:text="@string/set_motto"
            android:textColor="#000000"
            android:alpha="0.6"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/set_sort_mech"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:text="@string/app_sort_method"
            android:textColor="#000000"
            android:alpha="0.6"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/set_app_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:text="@string/label_app_level"
            android:textColor="#000000"
            android:alpha="0.6"
            android:textSize="18sp"/>

    </ScrollView>

</LinearLayout>